--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -17,93 +17,6 @@ ul li {
 .el-switch__core:after{
 	top:-5px!important;
 }
-
-/* 修改el-tree默认显示颜色 */
-.el-tree-node.is-current>.el-tree-node__content {
-	background-color: rgba(11, 211, 251, 0.5) !important;
-	color: #fff !important;
-}
-
-.el-tree-node:focus>.el-tree-node__content {
-	background-color: rgba(11, 211, 251, 0.5) !important;
-}
-.el-checkbox__label{
-	color:#fff!important;
-}
-.el-tree-node__content:hover {
-	background-color: rgba(11, 211, 251, 0.5) !important;
-	color: #fff !important;
-}
-.application .el-checkbox__label{
-	color:#fff!important;
-
-}
-.el-input-number--mini{
-	width:90px!important;
-}
-/* 修改复选框背景色 */
-.el-checkbox__input.is-checked+.el-checkbox__label {
-	color: #0bd3fb!important;
-}
-.el-checkbox__input.is-checked .el-checkbox__inner,.el-checkbox__input.is-indeterminate .el-checkbox__inner{
-	background-color: #0BD3FB!important;
-	border-color:#0BD3FB!important;
-}
-.el-checkbox__inner:hover{
-	border-color:#0BD3FB!important;
-}
-.el-checkbox__input.is-focus .el-checkbox__inner{
-	border-color:#0BD3FB!important;
-}
-.dialogFreeHand .el-tabs__item.is-active{
-	color:#0bd3fb!important;
-}
-.el-input--suffix .el-input__inner{
-	border:1px solid #0bd3fb!important;
-}
-.dialogFreeHand .el-tabs__item{
-	color:#fff!important;
-}
-.dialogFreeHand .el-tabs__item:hover{
-	color: #0bd3fb!important;
-}
-.el-tabs__active-bar{
-	background-color: #0bd3fb!important;
-}
-.dialogFreeHand .el-tabs__header{
-	margin-right:18px!important;
-}
-.dialogFreeHand .el-select{
-	margin-bottom: 10px;
-}
-.el-input__inner{
-	color:#fff!important;
-	background-color: rgba(255,255,255,.1)!important;
-}
-.el-input.is-active .el-input__inner, .el-input__inner:focus{
-	border:1px solid #0bd3fb!important;
-}
-.el-select-dropdown__item{
-	background-color: rgba(255,255,255,.1);
-}
-.el-select-dropdown__item.selected{
-	color: #0bd3fb!important;
-}
-.el-input-number__decrease:hover:not(.is-disabled)~.el-input .el-input__inner:not(.is-disabled), .el-input-number__increase:hover:not(.is-disabled)~.el-input .el-input__inner:not(.is-disabled){
-		border-color:#0bd3fd!important;
-}
-.measure-btn{
-	margin-top:20px;
-	margin-bottom: 30px;
-	text-align: center;padding-right: 20px;}
-.measure-btn button{
-	transition: all 0.5s;
-}
-.measure-btn button:hover{
-	border:1px solid #0bd3fb;
-	color:#0bd3fb;
-}
-	
 /* add icon */
 @font-face {
 	font-family: "iconfont";
@@ -208,6 +121,20 @@ ul li {
 }
 .icon-biaohui:before {
 	content: "\ee32";
+}
+/* 登录页 */
+.elInput .el-input__inner{
+	border:1px solid #136387!important;
+	background-color:#0f3543;
+	color: #fff;
+}
+.elBtn .el-button{
+	width:100%;
+	 background-image: linear-gradient( #22dcfd, #5865b9);
+	 border:0px;
+	 font-size: 16px;
+	 font-weight: bold;
+	 text-shadow: 1px 1px 3px #000;
 }
 
 
