--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -222,3 +222,36 @@ ul li {
 .tableMain .el-table__body .el-table__row.hover-row td {
     background-color: rgba(0, 0, 0,0.3) !important;
   }
+  
+/* 修改菜单默认样式 */
+.dataSearchMenu .el-menu.el-menu--horizontal{
+	border:0;
+}
+.dataSearchMenu .el-menu{
+	background-color: transparent!important;
+}
+.dataSearchMenu  .el-submenu{
+	padding-left:10px !important;
+	border-radius: 20px!important;
+}
+.dataSearchMenu .el-menu--horizontal>.el-submenu .el-submenu__title{
+	height:40px;
+	line-height: 40px;
+	border-radius: 20px!important;
+	margin-top: 10px;
+}
+.timeSearch .el-checkbox{
+	display: block;
+	color: #fff!important;
+}
+.timeSearch .el-tree{
+	background: transparent!important;
+	color:#fff;
+}
+
+
+
+
+
+
+
