--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -227,5 +227,10 @@ ul li {
 	color:#fff!important;
 }
 
-
+.searchBtn .el-button{
+	background-color:rgb(21, 44, 64)!important;
+	color:#fff!important;
+	border:0px;
+	border-radius:20px;
+}
 
